syntax = "proto3";

// File ini dikelola oleh:
// Nama Maintainer   : ad1ee
// Email Maintainer  : mas.setyo.main@gmail.com
// Deskripsi         : File ini mendefinisikan UserService yang menyediakan
//                     API gRPC untuk mengambil detail pengguna berdasarkan User ID.

// Definisi Package di Golang. Ketika protobuf digenerate, maka akan mengikuti struktur folder berikut.
option go_package = "src/services/proto/user";

// Definisi package
package user;

// Request Payload
message UserRequest {
  repeated string userIds = 1; // Larik string untuk menerima beberapa ID pengguna
}

// Response Payload
message UserResponse {
  string email = 1;              // Email pengguna
  string phone = 2;              // Nomor telepon pengguna
  string bankAccountName = 3;    // Nama bank pengguna
  string bankAccountHolder = 4;  // Nama pemilik akun bank
  string bankAccountNumber = 5;  // Nomor akun bank
}

// Response untuk banyak pengguna
message UsersResponse {
  repeated UserResponse users = 1; // Larik UserResponse untuk beberapa pengguna
}

// Define RPC service
service UserService {
  rpc GetUserDetails(UserRequest) returns (UsersResponse); // Mendapatkan detail banyak pengguna
}
